<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Leave Management</string>
    <string name="add_employee">Add Employee</string>
    <string name="view_employees">View Employees</string>
    <string name="about_me">About Me</string>
    <string name="exitConfoMsg">Press once again to exit!</string>
    <string name="searchTitle">Search Here</string>
    <string name="employees_list_txt">Employees List</string>
    <string name="loading">Loading..</string>
    <string name="name">Name</string>
    <string name="_99648598655">99648598655</string>
    <string name="phone">Phone :</string>
    <string name="designation">Designation :</string>
    <string name="email">Email :</string>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="sanctionTxt">Sanction Leave</string>
    <string name="sanctionedTxt">Sanctioned Leaves</string>
    <string name="days">No. of Days*</string>
    <string name="mandtory_text">Mandtory</string>
    <string name="noInternet">OOPS! No internet connection to proceed</string>
    <string name="submit">Submit</string>
    <string name="remarks">remarks</string>
    <string name="half_day">Half Day</string>
    <string name="_2_and_half">2 and half</string>
    <string name="nameNe">Name*</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="phonen">Phone*</string>
    <string name="choose_picture">Choose Image</string>
    <string name="chooseImageTxt">Please Choose Image to proceed</string>
    <string name="emailPattern" tools:ignore="TypographyDashes">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+[a-z]+</string>
    <string name="invalidEmailError">Invalid email format</string>
    <string name="onlyTextRestriction">^[a-zA-Z. ]+$</string>
    <string name="errorOnlyText">Input should contain Only text</string>
    <string name="mobileNumError">Mobile number should be 10 digits</string>
    <string name="onlydigitsPattern" tools:ignore="TypographyDashes">[0-9]+</string>
    <string name="errorOnlyDigits">Input should contain Only Digits</string>
    <string name="imageNotSelectedTxt">Image Not Selected</string>

</resources>
