<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:background="#e7e7e7"
    android:padding="40dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/addEmployee"
        android:foreground="@drawable/ripple_effect"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/black_border"
        android:text="@string/add_employee"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/viewEmployee"
        android:foreground="@drawable/ripple_effect"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/black_border"
        android:text="@string/view_employees"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/aboutMe"
        android:foreground="@drawable/ripple_effect"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/black_border"
        android:text="@string/about_me"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>