<?xml version="1.0" encoding="utf-8"?>
<!-- tool bar starts here -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_rl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:actionMenuTextAppearance="@+id/toolbar"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>



    <ScrollView
        android:paddingBottom="@dimen/dimen_3dp"
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/daysAns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/days" />
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/checkbox"
                android:text="@string/half_day"
                android:layout_margin="@dimen/dimen_3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/remark"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/remarksAns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords|textMultiLine"
                    android:hint="@string/remarks" />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/submit"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20sp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </ScrollView>





</RelativeLayout>