<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="NamespaceTypo">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="15dp"
        android:padding="@dimen/dimen_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout"
            android:gravity="center"
            android:foreground="@drawable/ripple_effect"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:scaleType="fitXY"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/ic_launcher"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                tools:ignore="ContentDescription"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/name"
                android:paddingTop="@dimen/dimen_5dp"
                android:layout_alignBaseline="@+id/image"
                android:textSize="@dimen/dimen_20sp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UnknownId"
                android:layout_toEndOf="@+id/image" />

            <TextView
                android:id="@+id/phoneTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_toRightOf="@id/image"
                android:text="@string/phone"
                android:textSize="@dimen/dimen_16sp"
                android:layout_toEndOf="@id/image" />

            <TextView
                android:id="@+id/phoneAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_toRightOf="@id/phoneTxt"
                android:text="@string/_99648598655"
                android:textSize="@dimen/dimen_18sp"
                android:layout_toEndOf="@id/phoneTxt"
                android:layout_marginStart="@dimen/dimen_10dp" />

            <TextView
                android:id="@+id/designationTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneAns"
                android:layout_toRightOf="@id/image"
                android:text="@string/designation"
                android:textSize="@dimen/dimen_16sp"
                android:layout_toEndOf="@id/image" />

            <TextView
                android:id="@+id/designationAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/designationTxt"
                android:layout_toRightOf="@id/image"
                android:text="@string/_99648598655"
                android:textSize="@dimen/dimen_18sp"
                android:layout_toEndOf="@id/image" />

        </RelativeLayout>



    </android.support.v7.widget.CardView>

</RelativeLayout>