<?xml version="1.0" encoding="utf-8"?>
<!-- tool bar starts here -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_rl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:actionMenuTextAppearance="@+id/toolbar"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>



    <ScrollView
        android:paddingBottom="@dimen/dimen_3dp"
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="@dimen/dimen_3dp"
                android:id="@+id/image"
                android:padding="@dimen/dimen_2dp"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitCenter"
                android:background="@drawable/plain_black_border"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/name"
                android:text="@string/name"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dimen_2dp"
                android:textSize="@dimen/dimen_22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/emailTxt"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_5dp"
                tools:ignore="RtlSymmetry"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="@string/email"
                android:textSize="@dimen/dimen_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/emailAns"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="vaibhavjoshi9126@gmailc.om"
                android:textSize="@dimen/dimen_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText,RtlSymmetry" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:layout_marginBottom="@dimen/dimen_2dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/phoneTxt"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="@string/phone"
                android:textSize="@dimen/dimen_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/phoneAns"
                android:textColor="@color/black"
                android:textStyle=""
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="@string/_99648598655"
                android:textSize="@dimen/dimen_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText,RtlSymmetry" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:layout_marginBottom="@dimen/dimen_2dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/ageTxt"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="@string/age"
                android:textSize="@dimen/dimen_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ageAns"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="10"
                android:textSize="@dimen/dimen_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText,RtlSymmetry" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:layout_marginBottom="@dimen/dimen_2dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/genderTxt"
                android:paddingLeft="@dimen/dimen_3dp"
                android:paddingStart="@dimen/dimen_3dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="@string/gender"
                android:textSize="@dimen/dimen_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/genderAns"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="Female"
                android:textSize="@dimen/dimen_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText,RtlSymmetry" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:layout_marginBottom="@dimen/dimen_2dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/designationTxt"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="@string/designation"
                android:textSize="@dimen/dimen_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/designationAns"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:text="ces"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_5dp"
                android:textSize="@dimen/dimen_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText,RtlSymmetry" />


            <LinearLayout
                android:weightSum="1"
                android:gravity="end"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/sanctionLeaveBtn"
                    android:text="Sanction Leave"
                    android:layout_weight="0.5"
                    android:padding="@dimen/dimen_5dp"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/ripple_effect"
                    android:layout_margin="@dimen/dimen_3dp"
                    android:textAllCaps="false"
                    android:background="@color/green"
                    android:textSize="@dimen/dimen_18sp"
                    android:textColor="@android:color/white"
                    tools:ignore="ButtonStyle,HardcodedText,InefficientWeight" />

                <Button
                    android:id="@+id/sanctionedLeaveBtn"
                    android:text="Sanctioned Leaves"
                    android:padding="@dimen/dimen_5dp"
                    android:layout_weight="0.5"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/ripple_effect"
                    android:layout_margin="@dimen/dimen_3dp"
                    android:textAllCaps="false"
                    android:background="@color/colorPrimary"
                    android:textSize="@dimen/dimen_18sp"
                    android:textColor="@android:color/white"
                    tools:ignore="ButtonStyle,HardcodedText" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>





</RelativeLayout>