<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:actionMenuTextAppearance="@+id/toolbar"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/appbar"
        android:padding="@dimen/dimen_3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_gray"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/dimen_10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:inputType="textCapWords|textCapSentences"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:hint="@string/nameNe"
                    android:padding="@dimen/dimen_10dp"
                    android:textSize="@dimen/dimen_18sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/useEmailTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_10dp"
                    android:textSize="@dimen/dimen_18sp"
                    android:hint="Email*"
                    android:inputType="textEmailAddress"
                    tools:ignore="HardcodedText" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/userPhoneTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ExtraText">

                <EditText
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:hint="@string/phonen"
                    android:padding="@dimen/dimen_10dp"
                    android:textSize="@dimen/dimen_18sp"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/ageTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:inputType="number"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:hint="Age*"
                    android:padding="@dimen/dimen_10dp"
                    android:textSize="@dimen/dimen_18sp"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_margin="@dimen/dimen_3dp"
                android:text="@string/choose_gender"
                android:textSize="@dimen/dimen_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/male"
                    android:text="Male"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText"
                    android:layout_marginEnd="@dimen/dimen_10dp" />

                <RadioButton
                    android:id="@+id/female"
                    android:text="Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText" />

            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/designationTI"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/designation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:inputType="textCapWords"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:hint="Designation*"
                    android:padding="@dimen/dimen_10dp"
                    android:textSize="@dimen/dimen_18sp"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/chooseImageTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="Choose Image for User : "
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/buttonChooseImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/choose_picture"
                android:textAllCaps="false" />

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/dimen_10dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>

